syntax = "proto3";

package pb;

import "github.com/kappac/ve-back-end-utils/pkg/proto/error/generated.proto";

service VEAuthProviderGoogleService {
  rpc ValidateToken(VEValidateTokenRequest) returns (VEValidateTokenResponse);
}

message VEValidateTokenRequest {
  string token = 1;
}

message VEValidateTokenResponse {
  VEProviderInfo info  = 1;
  VEValidateTokenRequest request = 2;
  error.VEError error = 3;
}

message VEProviderInfo {
  string full_name = 1;
  string given_name = 2;
  string family_name = 3;
  string picture = 4;
  string email = 5;
}
